[metadata]
name = example-package-prakashk141
version = 0.0.1
author = Prakash Kumar
author_email = prakashk141@gmail.com
description = A small example package
long_description = file: README.md
long_description_type = text/markdown
url = https://github.com/Prakashk141/python_packaging
project_urls =
    Bug Tracker = https://github.com/Prakashk141/python_packaging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src